// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-108"
          >
            <div
              class="MuiBox-root MuiBox-root-109"
            >
              tag 3
            </div>
            <div
              class="MuiBox-root MuiBox-root-110"
            >
              134,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-111"
          >
            <div
              class="MuiBox-root MuiBox-root-112"
            >
              tag 1
            </div>
            <div
              class="MuiBox-root MuiBox-root-113"
            >
              2,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-114"
          >
            <div
              class="MuiBox-root MuiBox-root-115"
            >
              tag 2
            </div>
            <div
              class="MuiBox-root MuiBox-root-116"
            >
              0,16 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-117"
          >
            <div
              class="MuiBox-root MuiBox-root-118"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-119"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`renders correctly with filtered data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-172"
          >
            <div
              class="MuiBox-root MuiBox-root-173"
            >
              tag 3
            </div>
            <div
              class="MuiBox-root MuiBox-root-174"
            >
              132,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-175"
          >
            <div
              class="MuiBox-root MuiBox-root-176"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-177"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`renders correctly without data 1`] = `
<DocumentFragment>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-53"
          >
            <div
              class="MuiBox-root MuiBox-root-54"
            >
              untagged
            </div>
            <div
              class="MuiBox-root MuiBox-root-55"
            >
              0,00 €
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
